--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "Birgittes Briks",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^10.4.21",
     "bcrypt": "^6.0.0",
     "connect-pg-simple": "^10.0.0",
     "cookie-parser": "^1.4.7",
@@ -33,12 +34,11 @@
     "helmet": "^8.1.0",
     "nodemailer": "^7.0.9",
     "path": "^0.12.7",
-    "pg": "^8.16.3"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "nodemon": "^3.0.1",
+    "pg": "^8.16.3",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.14"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
