--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build-css": "tailwindcss -i ./src/input.css -o ./public/css/style.css",
-    "watch-css": "tailwindcss -i ./src/input.css -o ./public/css/style.css --watch",
-    "build": "npm run build-css && node server.js",
-    "railway-build": "npm run build-css",
+    "build-css": "npx tailwindcss -i ./src/input.css -o ./public/css/style.css --minify",
+    "watch-css": "npx tailwindcss -i ./src/input.css -o ./public/css/style.css --watch",
+    "build": "npm run build-css",
+    "postinstall": "npm run build-css",
     "db:init": "node -e \"require('./database/init').initDatabase()\""
   },
   "keywords": [
