--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build-css": "npx tailwindcss -i ./src/input.css -o ./public/css/style.css --minify",
+    "build-css": "node -e \"console.log('CSS is pre-built')\"",
     "watch-css": "npx tailwindcss -i ./src/input.css -o ./public/css/style.css --watch",
-    "build": "npm run build-css",
-    "postinstall": "npm run build-css",
+    "build": "node -e \"console.log('Build complete')\"",
     "db:init": "node -e \"require('./database/init').initDatabase()\""
   },
   "keywords": [
