feat: Migrate from raw SQL to Prisma ORM
- Install @prisma/client and prisma packages
- Create Prisma schema with Booking, BlockedDate, and Session models
- Migrate all database queries to use Prisma Client
- Update routes/bookings.js to use Prisma
- Update routes/admin.js to use Prisma
- Create new database/prisma.js for Prisma client initialization
- Add routes/pages.js for page routing
- Update package.json with Prisma scripts
- Update server.js to use Prisma
- Add PRISMA_MIGRATION.md documentation

--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "build-css": "node -e \"console.log('CSS is pre-built')\"",
     "watch-css": "npx tailwindcss -i ./src/input.css -o ./public/css/style.css --watch",
     "build": "node -e \"console.log('Build complete')\"",
-    "db:init": "node -e \"require('./database/init').initDatabase()\""
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "db:generate": "prisma generate",
+    "test:db:up": "docker-compose -f docker-compose.test.yml up -d",
+    "test:db:down": "docker-compose -f docker-compose.test.yml down",
+    "test:db:setup": "set DATABASE_URL=postgresql://testuser:testpass@localhost:5433/birgittesbriks_test && npx prisma db push --skip-generate",
+    "test:api": "node tests/api-test.js",
+    "test": "npm run test:db:up && npm run test:db:setup && npm run test:api"
   },
   "keywords": [
     "physiotherapy",
@@ -20,6 +27,7 @@
   "author": "Birgittes Briks",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.19.2",
     "autoprefixer": "^10.4.21",
     "bcrypt": "^6.0.0",
     "connect-pg-simple": "^10.0.0",
@@ -35,6 +43,7 @@
     "path": "^0.12.7",
     "pg": "^8.16.3",
     "postcss": "^8.5.6",
+    "prisma": "^6.19.2",
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
