--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:generate": "prisma generate",
-    "test:db:up": "docker-compose -f docker-compose.test.yml up -d",
-    "test:db:down": "docker-compose -f docker-compose.test.yml down",
-    "test:db:setup": "set DATABASE_URL=postgresql://testuser:testpass@localhost:5433/birgittesbriks_test && npx prisma db push --skip-generate",
-    "test:api": "node tests/api-test.js",
-    "test": "npm run test:db:up && npm run test:db:setup && npm run test:api"
+    "test": "jest --detectOpenHandles --forceExit",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:positive": "jest bookings.positive.test.js",
+    "test:negative": "jest bookings.negative.test.js",
+    "test:all": "jest --detectOpenHandles --forceExit --verbose"
   },
   "keywords": [
     "physiotherapy",
@@ -47,6 +48,8 @@
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "jest": "^30.2.0",
+    "nodemon": "^3.0.1",
+    "supertest": "^7.2.2"
   }
 }
