--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "test:coverage": "jest --coverage",
     "test:positive": "jest bookings.positive.test.js",
     "test:negative": "jest bookings.negative.test.js",
-    "test:all": "jest --detectOpenHandles --forceExit --verbose"
+    "test:all": "jest --detectOpenHandles --forceExit --verbose",
+    "email:test": "node scripts/send-test-email.js",
+    "test:email": "RUN_EMAIL_TEST=true jest __tests__/resend.test.js --runInBand"
   },
   "keywords": [
     "physiotherapy",
